实体添加与删除监测

--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "bugs": "https://github.com/liujiaqi7998/node-red-easy-grasscutters/issues",
     "node-red": {
         "nodes": {
+            "CreateEntity":"CreateEntity.js",
+            "OnKillEntity": "OnKillEntity.js",
+            "ChangePosition": "ChangePosition.js",
+            "OnPosition": "OnPosition.js",
             "QuestFinish": "QuestFinish.js",
             "QuestAction": "QuestAction.js",
             "RunCmdByPlayer": "RunCmdByPlayer.js",
