版本1测试全部通过

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "bugs": "https://github.com/liujiaqi7998/node-red-easy-grasscutters/issues",
     "node-red": {
         "nodes": {
+            "OnPlayerExp": "OnPlayerExp.js",
+            "OnPlayerJoin": "OnPlayerJoin.js",
+            "DelQuest": "DelQuest.js",
             "SendMail": "SendMail.js",
             "SendMessage": "SendMessage.js",
             "OnQuestChange": "OnQuestChange.js",
