Console修改目录结构

--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
             "OnQuestChange": "node/Event/OnQuestChange.js",
             "OnKillEntity": "node/Event/OnKillEntity.js",
             "OnPosition": "node/Event/OnPosition.js",
-            "ConsoleLog": "node/ConsoleLog.js",
-            "RunCommand": "node/RunCommand.js",
+            "ConsoleLog": "node/Console/ConsoleLog.js",
+            "RunCommand": "node/Console/RunCommand.js",
             "DelQuest": "node/DelQuest.js",
             "SendMail": "node/SendMail.js",
             "SendMessage": "node/SendMessage.js",
